--- a/vim.org
+++ b/vim.org
@@ -21,75 +21,87 @@ endif
 set runtimepath+=/Users/cebrian/.config/nvim//repos/github.com/Shougo/dein.vim
 
 " Required:
-==== BASE ====
-NeoBundleFetch 'Shougo/neobundle.vim'
+if dein#load_state($HOME.'/.config/nvim/')
+  call dein#begin($HOME.'/.config/nvim/')
 
-" My Bundles here:
-" Refer to |:NeoBundle-examples|.
-" Note: You don't set neobundle setting in .gvimrc!
+  " Let dein manage dein
+  " Required:
+  call dein#add($HOME.'/.config/nvim//repos/github.com/Shougo/dein.vim')
 
-" Snippets
-NeoBundle 'SirVer/ultisnips'
-NeoBundle 'honza/vim-snippets' " This are the actual snippets
-let g:UltiSnipsExpandTrigger="<tab>"
-let g:UltiSnipsListSnippets="<c-tab>"
-let g:UltiSnipsJumpForwardTrigger="<c-b>"
-let g:UltiSnipsJumpBackwardTrigger="<c-z>"
+  " Add or remove your plugins here:
+  call dein#add('Shougo/neosnippet.vim')
+  call dein#add('Shougo/neosnippet-snippets')
 
-" Replacecment for Grep
-NeoBundle 'numkil/ag.nvim'
+   " Snippets
+   call dein#add('SirVer/ultisnips')
+   call dein#add('honza/vim-snippets') " This are the actual snippets
+   let g:UltiSnipsExpandTrigger="<tab>"
+   let g:UltiSnipsListSnippets="<c-tab>"
+   let g:UltiSnipsJumpForwardTrigger="<c-b>"
+   let g:UltiSnipsJumpBackwardTrigger="<c-z>"
 
-" If you want :UltiSnipsEdit to split your window.
-let g:UltiSnipsEditSplit="vertical"
+   " Replacecment for Grep
+   call dein#add('numkil/ag.nvim')
 
-" ReST documentation plugin
-NeoBundle 'Rykka/riv.vim'
+   " If you want :UltiSnipsEdit to split your window.
+   let g:UltiSnipsEditSplit="vertical"
 
-" Git plugins
-NeoBundle 'tpope/vim-fugitive.git'
-NeoBundle 'int3/vim-extradite' " Extend fugitive capabilities
+   " ReST documentation plugin
+   call dein#add('Rykka/riv.vim')
 
-" Bars, panels and files
-NeoBundle 'Shougo/unite.vim'
+   " Git plugins
+   call dein#add('tpope/vim-fugitive.git')
+   call dein#add('int3/vim-extradite') " Extend fugitive capabilities
 
-" Text manipulation
-NeoBundle 'vim-scripts/Align'
-NeoBundle 'vim-scripts/Gundo'
-NeoBundle 'tpope/vim-commentary'
-NeoBundle 'godlygeek/tabular'
+   " Bars, panels and files
+   call dein#add('Shougo/unite.vim')
 
-NeoBundle 'tpope/vim-surround.git'
-NeoBundle 'vim-scripts/The-NERD-tree.git'
-NeoBundle 'altercation/vim-colors-solarized.git'
-NeoBundle 'scrooloose/syntastic.git'
-NeoBundle 'techlivezheng/vim-plugin-minibufexpl'
-NeoBundle 'Shougo/vimproc',{
-      \ 'build' : {
-      \     'windows' : 'make -f make_mingw32.mak',
-      \     'cygwin' : 'make -f make_cygwin.mak',
-      \     'mac' : 'make -f make_mac.mak',
-      \     'unix' : 'make -f make_unix.mak',
-      \    },
-      \ }
-NeoBundle 'jgdavey/tslime.vim' "Send snippets to tmux
-NeoBundleLazy 'derekwyatt/vim-scala'
+   " Text manipulation
+   call dein#add('vim-scripts/Align')
+   call dein#add('vim-scripts/Gundo')
+   call dein#add('tpope/vim-commentary')
+   call dein#add('godlygeek/tabular')
 
-" Haskell
-NeoBundleLazy 'raichoo/haskell-vim'
-NeoBundleLazy 'begriffs/vim-haskellConceal'
-NeoBundleLazy 'eagletmt/ghcmod-vim'
-NeoBundleLazy 'eagletmt/neco-ghc'
-NeoBundleLazy 'Twinside/vim-hoogle'
+   call dein#add('tpope/vim-surround.git')
+   call dein#add('vim-scripts/The-NERD-tree.git')
+   call dein#add('altercation/vim-colors-solarized.git')
+   call dein#add('scrooloose/syntastic.git')
+   call dein#add('techlivezheng/vim-plugin-minibufexpl')
+   call dein#add('Shougo/vimproc',{
+         \ 'build' : {
+         \     'windows' : 'make -f make_mingw32.mak',
+         \     'cygwin' : 'make -f make_cygwin.mak',
+         \     'mac' : 'make -f make_mac.mak',
+         \     'unix' : 'make -f make_unix.mak',
+         \    },
+         \ })
+   call dein#add('jgdavey/tslime.vim') "Send snippets to tmux
+   call dein#add('derekwyatt/vim-scala')
 
-NeoBundleLazy 'chrisbra/NrrwRgn'
+   " Haskell
+   call dein#add('raichoo/haskell-vim')
+   call dein#add('begriffs/vim-haskellConceal')
+   call dein#add('eagletmt/ghcmod-vim')
+   call dein#add('eagletmt/neco-ghc')
+   call dein#add('Twinside/vim-hoogle')
 
-" Python development
-NeoBundle 'klen/python-mode'
-NeoBundle 'davidhalter/jedi-vim'
+   call dein#add('chrisbra/NrrwRgn')
 
-call neobundle#end()
-==== BASE ====
+   " Python development
+   call dein#add('klen/python-mode')
+   call dein#add('davidhalter/jedi-vim')
 
+   " You can specify revision/branch/tag.
+   call dein#add('Shougo/vimshell', { 'rev': '3787e5' })
+
+   " Syntax Highlight
+   " Pig
+   call dein#add('motus/pig.vim')
+
+  " Required:
+  call dein#end()
+  call dein#save_state()
+endif
 #+END_SRC
 
 * Key bindings
